--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
       - uses: actions/setup-node@v2
         with:
           node-version: ^14
-      - run: make deps
-      - run: make build
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1.0
         with:
