--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,23 @@ name: CI
 on: push
 
 jobs:
+  checks:
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "1.17"
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ^14
+
+      - name: linting code
+        run: make lint
+
+      - name: checking license on source code
+        run: make license/check
   build:
     strategy:
       matrix:
