--- a/package.json
+++ b/package.json
@@ -71,6 +71,17 @@
 							"-mode=stdio"
 						],
 						"description": "Arguments to pass to language server binary"
+					},
+					"terramate.languageServer.trace.server": {
+						"scope": "window",
+						"type": "string",
+						"enum": [
+						  "off",
+						  "messages",
+						  "verbose"
+						],
+						"default": "verbose",
+						"description": "Traces the communication between VS Code and the language server."
 					}
 				}
 			}
