--- a/package.json
+++ b/package.json
@@ -108,6 +108,8 @@
 		"@vscode/test-electron": "^2.1.2",
 		"eslint": "^8.12.0",
 		"mocha": "^9.2.1",
-		"typescript": "^4.6.2"
+		"ovsx": "^0.5.0",
+		"typescript": "^4.6.2",
+		"vsce": "^2.9.1"
 	}
 }
