--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"hcl"
 	],
 	"engines": {
-		"vscode": "^1.63.0"
+		"vscode": "^1.52.0"
 	},
 	"activationEvents": [
 		"onLanguage:terramate"
@@ -93,8 +93,7 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
-		"lint": "eslint ./src --ext .ts,.tsx",
-		"test": "sh ./scripts/e2e.sh"
+		"lint": "eslint ./src --ext .ts,.tsx"
 	},
 	"dependencies": {
 		"vscode-languageclient": "^7.0.0"
@@ -110,6 +109,7 @@
 		"mocha": "^9.2.1",
 		"ovsx": "^0.5.0",
 		"typescript": "^4.6.2",
-		"vsce": "^2.9.1"
+		"vsce": "^2.9.1",
+		"semver": "^7.3.7"
 	}
 }
