--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,14 @@ jobs:
   build:
     strategy:
       matrix:
-        version: ['1.62.0', '1.63.0', '1.68.0', 'stable', 'insiders']
+        version: [
+          '', # uses the minimum supported version defined in package.json
+          '1.62.0',
+          '1.63.0',
+          '1.68.0',
+          'stable',
+          'insiders'
+        ]
         os: [macos-10.15, ubuntu-20.04, windows-2019]
     runs-on: ${{ matrix.os }}
     steps:
