--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "terramate",
-	"displayName": "Mineiros Terramate",
+	"displayName": "Terramate",
 	"publisher": "mineiros",
 	"description": "VSCode Terramate Extension",
-	"author": "Mineiros GmbH",
+	"author": "Terramate GmbH",
 	"icon": "assets/terramate.png",
 	"license": "Apache",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mineiros-io/vscode-terramate"
+		"url": "https://github.com/terramate-io/vscode-terramate"
 	},
 	"categories": [
 		"Programming Languages",
