--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,10 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
         with:
-          go-version: "1.17"
+          go-version: "1.20"
       - uses: actions/setup-node@v2
         with:
           node-version: ^18
@@ -30,13 +30,13 @@ jobs:
           'stable',
           'insiders'
         ]
-        os: [macos-10.15, ubuntu-20.04, windows-2019]
+        os: [macos-12, ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
         with:
-          go-version: "1.17"
+          go-version: "1.20"
       - uses: actions/setup-node@v2
         with:
           node-version: ^18
