--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
+          go-version: "1.22"
       - uses: actions/setup-node@v2
         with:
           node-version: ^18
@@ -21,6 +21,7 @@ jobs:
         run: make license/check
   build:
     strategy:
+      fail-fast: false
       matrix:
         version: [
           '', # uses the minimum supported version defined in package.json
@@ -36,11 +37,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
+          go-version: "1.22"
       - uses: actions/setup-node@v2
         with:
           node-version: ^18
       - name: Run tests
-        uses: GabrielBB/xvfb-action@v1.0
+        uses: coactions/setup-xvfb@v1
+        env:
+          DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/bus
         with:
           run: make test VERSION=${{ matrix.version }}
