--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"vscode": "^1.52.0"
 	},
 	"activationEvents": [
-		"onLanguage:terramate"
+		"onLanguage:terramate",
+		"onCommand:terramate.createStack"
 	],
 	"main": "./out/extension",
 	"contributes": {
@@ -87,7 +88,22 @@
 					}
 				}
 			}
-		]
+		],
+		"commands": [
+			{
+				"command": "terramate.createStack",
+				"title": "Create Terramate Stack",
+				"category": "Terramate"
+			}
+		],
+		"menus": {
+			"explorer/context": [
+				{
+					"command": "terramate.createStack",
+					"group": "terramate"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
@@ -104,12 +120,12 @@
 		"@types/vscode": "^1.52.0",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
-		"@vscode/test-electron": "^2.1.2",
+		"@vscode/test-electron": "^2.3.8",
 		"eslint": "^8.12.0",
 		"mocha": "^9.2.1",
 		"ovsx": "^0.5.0",
+		"semver": "^7.3.7",
 		"typescript": "^4.6.2",
-		"vsce": "^2.9.1",
-		"semver": "^7.3.7"
+		"vsce": "^2.15.0"
 	}
 }
