build: add release scripts to scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Terramate",
 	"publisher": "terramate",
 	"description": "VSCode Terramate Extension",
-	"author": "Terramate GmbH",
+	"author": "Terramate",
 	"icon": "assets/terramate.png",
 	"license": "Apache",
 	"version": "0.0.5",
@@ -106,7 +106,10 @@
 		"test": "sh ./scripts/e2e.sh",
 		"test:syntax": "sh ./scripts/e2e.sh --grep 'Syntax Recognition'",
 		"test:core": "sh ./scripts/e2e.sh --grep 'Core LS'",
-		"test:pro": "sh ./scripts/e2e.sh --grep 'Pro Features'"
+		"test:pro": "sh ./scripts/e2e.sh --grep 'Pro Features'",
+		"version:patch": "npm version patch -m 'chore: bump version to %s'",
+		"version:minor": "npm version minor -m 'chore: bump version to %s'",
+		"version:major": "npm version major -m 'chore: bump version to %s'"
 	},
 	"dependencies": {
 		"vscode-languageclient": "^9.0.1"
