--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
     name: Build and Publish
     runs-on: ubuntu-latest
     if: github.repository == 'terramate-io/vscode-terramate'
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout code
