chore: update publisher to mineiros

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "terramate",
 	"displayName": "Terramate",
-	"publisher": "terramate",
+	"publisher": "mineiros",
 	"description": "VSCode Terramate Extension",
 	"author": "Terramate",
 	"icon": "assets/terramate.png",
