fix: include vscode-languageclient runtime dependency in VSIX package
The extension was failing to activate after installation with error:
'Cannot find module vscode-languageclient/node'

Root cause: The release workflow was using --no-dependencies flag
when packaging, which excluded all node_modules from the VSIX.

Changes:
- Remove --no-dependencies flag from vsce package command
- Update .vscodeignore to let vsce handle dependency inclusion
- Add changelog entry documenting the fix

Fixes extension activation error for users installing from VSIX.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         run: pnpm lint
 
       - name: Create VSIX package
-        run: pnpm exec vsce package --no-dependencies
+        run: pnpm exec vsce package
 
       - name: Get version
         id: version
