fix: use correct dependencies for release script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,10 @@ jobs:
         run: |
           rm -rf node_modules
           npm install --production
+          npm install --no-save @vscode/vsce
 
       - name: Create VSIX package
-        run: npx vsce package
+        run: npx @vscode/vsce package
 
       - name: Get version
         id: version
@@ -72,7 +73,7 @@ jobs:
         run: |
           if [ -n "$VSCODE_ACCESS_TOKEN" ]; then
             echo "Publishing to VSCode Marketplace..."
-            pnpm exec vsce publish --packagePath terramate-${{ steps.version.outputs.version }}.vsix -p $VSCODE_ACCESS_TOKEN
+            npx @vscode/vsce publish --packagePath terramate-${{ steps.version.outputs.version }}.vsix -p $VSCODE_ACCESS_TOKEN
           else
             echo "⚠️  VSCODE_ACCESS_TOKEN not set, skipping VSCode Marketplace publish"
           fi
@@ -83,7 +84,7 @@ jobs:
         run: |
           if [ -n "$OPEN_VSX_ACCESS_TOKEN" ]; then
             echo "Publishing to Open VSX..."
-            pnpm exec ovsx publish terramate-${{ steps.version.outputs.version }}.vsix -p $OPEN_VSX_ACCESS_TOKEN
+            npx ovsx publish terramate-${{ steps.version.outputs.version }}.vsix -p $OPEN_VSX_ACCESS_TOKEN
           else
             echo "⚠️  OPEN_VSX_ACCESS_TOKEN not set, skipping Open VSX publish"
           fi
